feat: Создать CustomLinkedList для удаления записей из истории за O(n)